# editor

./: Cargo.toml  README.md  context.md  roadmap.md
backend/: Cargo.toml
backend/src/: collision_shape.rs  lib.rs  primitives.rs  reducers.rs  types.rs
backend/src/shape/: ball.rs  capsule.rs  collision_shape.rs  convex_hull.rs  cuboid.rs  heightfield.rs  mod.rs  primitive_shape.rs  segment.rs  triangle.rs
client/: .env  Cargo.toml  README.md  WGSL.md
client/assets/shaders/: grid.wgsl  infinite_grid.wgsl
client/src/: config.rs  floor_wireframe.rs  flycam.rs  fps_overlay.rs  infinite_grid.rs  main.rs  spacetimedb.rs  world_object.rs
client/src/gizmo/: mod.rs
client/src/module_bindings/: asset_kind_type.rs  ball_type.rs  capsule_type.rs  capsule_y_data_type.rs  collision_shape_type.rs  cuboid_type.rs  heightfield_data_type.rs  insert_asset_reducer.rs  mod.rs  move_object_reducer.rs  primitive_shape_type.rs  quat_type.rs  scale_object_reducer.rs  segment_type.rs  world_object_table.rs  world_objects_table.rs
client/src/ui/: mod.rs
client/src/ui/app_bar/: file_menu.rs  mod.rs  view_menu.rs
client/src/ui/asset_browser/: mod.rs
client/src/ui/fps/: mod.rs
client/src/ui/performance/: mod.rs
client/src/ui/transform_tools/: mod.rs
client/src/window/: mod.rs
example/: Cargo.toml
example/game/: Cargo.toml
example/game/src/: main.rs  spacetime.rs  world_object.rs
example/game/src/module_bindings/: collision_shape_type.rs  convex_hull_type.rs  mod.rs  (+6 more)
example/server/: Cargo.toml
example/server/src/: lib.rs
xtask/: Cargo.toml
xtask/src/: main.rs
